# coreline_bots_dashboard

./: .env.example  .gitignore  IMPROVEMENT_CHECKLIST.md  LICENSE  README.md  docker-compose.yml  flower-shop-landing.html  package-lock.json  package.json  pyproject.toml
config/: bots.example.yaml  bots.multibot.yaml  bots.yaml
docs/: bot_core_basic_functionality_test_cases.md  cowork_10_project_campaign.md  cowork_batch_report_10_topics_models_capped.md  debate_batch_report_10x3.md  landing_page_self_test_plan.md  multibot_output_test_plan.md  p0_p5_execution_tickets.md  play_commands_manual.md  rca_bot_catalog_cap_and_unknown_bot.md  refactor_stage_1_4_execution_plan.md  role_based_workflow_spec_v1.md
planning/: PRD.md  baseline_decision_log.md
scripts/: bootstrap-local.ps1  report_cowork_web_suite.py  run-cowork-web-10cases.sh  run-incident-drill.sh  run-local-fixed.sh  run-local-multibot.sh  run-local-with-mock.ps1  run-local.ps1  run-local.sh  run-mock-codex-bridge.ps1  run-mock-messenger.ps1  stop-mock-codex-bridge.ps1  sync-remotion-skill.sh  verify-mock-ui-e2e.sh  verify-multibot-smoke.sh  verify-release-flow.sh  verify-repository-postgres.sh
tests/: test_claude_adapter.py  test_codex_adapter.py  test_command_menu_router.py  test_cowork_live_suite_runner.py  test_cowork_project_contract_hardening.py  test_gemini_adapter.py  test_landing_page_self_tests.py  test_mock_codex_bridge.py  test_mock_cowork_api.py  test_mock_cowork_orchestrator.py  test_mock_debate_api.py  test_mock_debate_orchestrator.py  test_mock_messenger_api.py  test_provider_binaries.py  (+21 more)
(+107 files in other folders)
