[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-bot-new"
version = "0.1.0"
description = "Telegram to Codex CLI bridge MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "greenlet>=3.1.0,<4.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "PyYAML>=6.0.2,<7.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0"
]

[project.scripts]
telegram-bot-new = "telegram_bot_new.main:main"
telegram-bot-new-mock = "telegram_bot_new.mock_messenger.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["telegram_bot_new*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
